--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,4 +8,16 @@ set -g status-fg  green
 set -g status-bg  black
 set -g mouse on
 
+set-option -g allow-rename off
+
+# makes tmux send out the proper escape codes for setting the terminal title
+set-option -g set-titles on
+# sets the content of the title: user@host: /current/working/directory
+set-option -g set-titles-string "#(echo $USER)@#H: #{pane_current_path}"
+
+# Set new panes to open in current directory
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 run '~/.tmux/plugins/tpm/tpm'
