preserve cwd when splitting panes in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+run '~/.tmux/plugins/tpm/tpm'
 
 set -g default-terminal 'screen-256color'
 set -g history-limit 10000
@@ -8,16 +9,14 @@ set -g status-fg  green
 set -g status-bg  black
 set -g mouse on
 
-set-option -g allow-rename off
+set-option -g allow-rename on
 
-# makes tmux send out the proper escape codes for setting the terminal title
+# make tmux send out the proper escape codes for setting the terminal title
 set-option -g set-titles on
-# sets the content of the title: user@host: /current/working/directory
+# set the content of the title: user@host: /current/working/directory
 set-option -g set-titles-string "#(echo $USER)@#H: #{pane_current_path}"
 
-# Set new panes to open in current directory
-bind c new-window -c "#{pane_current_path}"
+# set new panes to open in current directory
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
-
-run '~/.tmux/plugins/tpm/tpm'
+bind c new-window -c "#{pane_current_path}"
